20180604 / Basic functions working

--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8"/>
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="Code Snippets\CSS\mainstylereset.css">
+  <link rel="stylesheet" href="assets/mainstylereset.css">
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
@@ -25,7 +26,7 @@
       <div id='button' class='numberButton'>7</div>
       <div id='button' class='numberButton'>8</div>
       <div id='button' class='numberButton'>9</div>
-      <div id='button' class='operatorButton'>÷</div>
+      <div id='button' class='operatorButton'>&#247;</div>
       <!-- row 4  -->
       <div id='button' class='numberButton'>4</div>
       <div id='button' class='numberButton'>5</div>
