--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="assets/mainstylereset.css">
+  <link rel="stylesheet" href="assests/mainstylereset.css">
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
